# test-platform

./: .dockerignore  .gitignore  README.md  docker-compose.yml  prd.md  project-summary.md
services/api/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py
services/api/src/test_platform_api/: __init__.py  ai_analyzer.py  analysis.py  analysis_export.py  analysis_jobs.py  app.py  artifact_prune.py  artifact_storage.py  auth.py  db.py  event_ingest.py  history.py  logs.py  main.py  paths.py  ports.py  projections.py  redis_bus.py
services/api/tests/: test_analysis.py  test_artifact_prune.py  test_artifact_storage.py  test_auth.py  test_event_ingest.py  test_fingerprint_persist.py  test_history.py  test_history_duration_fallback.py  test_history_trends.py  test_logs.py  test_occurrence_retention.py  test_plugin_manifest.py  test_projections.py  test_runs.py
services/executor/: CHANGELOG.md  Dockerfile  pyproject.toml
services/executor/src/test_platform_executor/: __init__.py  events.py  handler.py  main.py  paths.py  pool.py  pytest_plugin.py  pytest_runner.py
services/executor/src/test_platform_executor/framework/: __init__.py  adapters.py  artifacts.py  catalog.py  context.py  emission.py  flaky_steps.py  (+9 more)
services/executor/tests/: test_action_timing.py  test_emission_context.py  test_flaky_steps.py  test_google_steps.py  test_justjoin_steps.py  test_pool.py  test_runner.py  test_s3_artifacts.py  test_scoped_log.py  test_step_decorator.py  test_timing.py  test_youtube_steps.py
(+33 files in other folders)
