[project]
name = "test-platform-api"
version = "0.1.0"
description = "Test Platform API — orchestrates scenarios, runs, and events"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "pydantic-ai>=0.2",
    "python-dotenv>=1.0",
    "test-platform-contracts",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.uv.sources]
test-platform-contracts = { path = "../../packages/contracts", editable = true }

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
test-platform-api = "test_platform_api.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
