[project]
name = "test-platform-executor"
version = "0.1.0"
description = "Pluggable test executor with worker pool for Test Platform"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "redis>=5.0",
    "pytest>=8.0",
    "test-platform-contracts",
]

[dependency-groups]
dev = [
    "fakeredis>=2.26",
]

[tool.uv.sources]
test-platform-contracts = { path = "../../packages/contracts", editable = true }

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
test-platform-executor = "test_platform_executor.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
